text align last bug fix header

--- a/style.css
+++ b/style.css
@@ -599,7 +599,7 @@ a:hover {
 	}
 
 	#secret {
-		text-align: left;
+		text-align-last: left;
 	}
 }
 
